tests/ui/error-codes/E0259.rs
#![feature(test)]

extern crate alloc;

extern crate test as alloc;
//~^ ERROR E0259

fn main() {}
